[package]
name = "bdo_utils"
version = "0.1.0"
authors = ["Fuzen <me@fuzen.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
serde = {version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = {version = "0.4", features = ["serde"] }
async-trait = "0.1"
uuid = {version = "0.8", features = ["serde"]}
url = "2"
anyhow = "1"
scraper = "0.12"