[package]
name = "bdo_utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {Version = "1", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }


[lib]
name = "bdo_utility"
path = "lib.rs"
